# turboai-code-challenge

./: .gitignore  CLAUDE.md  README.md  SETUP_GUIDE.md  ngrok.yml  slides.html
.claude/: settings.json  settings.local.json.example
.claude/agents/: code-reviewer.md
.claude/commands/: verify.md
.githooks/: pre-commit
backend/: .importlinter  conftest.py  manage.py  pyproject.toml  requirements.txt
backend/accounts/: container.py
backend/accounts/application/: commands.py  ports.py  services.py
backend/accounts/domain/: entities.py  exceptions.py
backend/accounts/infrastructure/: events.py  passwords.py  repositories.py  seeding.py  tokens.py  unit_of_work.py
backend/accounts/interface/: serializers.py  urls.py  views.py
backend/accounts/tests/: fakes.py  test_auth_api.py  test_auth_service.py  test_cors.py
backend/config/: asgi.py  db.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/config/tests/: test_db.py
backend/notes/: container.py  models.py
backend/notes/application/: commands.py  ports.py  services.py
backend/notes/domain/: defaults.py  entities.py  exceptions.py  repositories.py
backend/notes/infrastructure/: clock.py  mappers.py  models.py  repositories.py  unit_of_work.py
backend/notes/interface/: serializers.py  urls.py  views.py
backend/notes/migrations/: 0001_initial.py  0002_noteorm.py  0003_remove_noteorm_locked_by_noteorm_locked_by_session.py
backend/notes/tests/: fakes.py  test_board_api.py  test_category_entity.py  test_category_repository.py  test_collab_api.py  test_note_concurrency.py  test_note_entity.py  test_note_lock.py  test_note_repository.py  test_note_service.py  test_notes_api.py
backend/observability/: apps.py  context.py  events.py  fingerprint.py  handlers.py  middleware.py  models.py  redaction.py
backend/observability/migrations/: 0001_initial.py
backend/observability/tests/: test_events.py  test_fingerprint.py  test_handler.py  test_middleware.py  test_redaction.py
backend/shared/: __init__.py
docs/: AI_USAGE.md  ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md
frontend/: .dependency-cruiser.cjs  .eslintrc.cjs  .prettierignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts
specs/: EARS-cheatsheet.md  OVERVIEW.md  README.md
(+146 files in other folders)
